# templatr

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: cargo-build.yml
src/: main.rs
src/lib/: data.rs  exec.rs  git.rs  mod.rs  paths.rs  prompt.rs
