[package]
name = "templatr"
version = "0.1.0"
edition = "2024"
authors = ["Fernthedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]


[dependencies]
thiserror = "2"

# lib used only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gix = { version = "*", features = [
    "command",
    "attributes",
    "progress-tree",
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
], default-features = false}

dirs = "6"
regex = "1"
fs_extra = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"

[lib]
name = "templatr"
path = "src/lib/mod.rs"

[profile.release]
opt-level = 3
lto = true